// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with custom space above 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  className="Dialog"
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={false}
  restoreFocus={true}
  show={true}
  size="lg"
  style={
    Object {
      "paddingTop": "200px",
    }
  }
>
  <style>
    
                .Dialog .modal-dialog .modal-content {
                    box-shadow: 0 0 25px #3b6cf41a;
                    border-color: black
                }
                
  </style>
  <ModalBody>
    Content
  </ModalBody>
  <ModalFooter>
    <Button
      action={
        Object {
          "buttonText": "Text",
          "buttonVariant": "primary",
          "callback": [MockFunction],
          "id": "button",
        }
      }
      backgroundColor="#eff3fe"
    />
  </ModalFooter>
</Modal>
`;

exports[`renders with default space above 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  className="Dialog"
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={false}
  restoreFocus={true}
  show={true}
  size="lg"
  style={Object {}}
>
  <style>
    
                .Dialog .modal-dialog .modal-content {
                    box-shadow: 0 0 25px #3b6cf41a;
                    border-color: black
                }
                
  </style>
  <ModalBody>
    Content
  </ModalBody>
  <ModalFooter>
    <Button
      action={
        Object {
          "buttonText": "Text",
          "buttonVariant": "primary",
          "callback": [MockFunction],
          "id": "button",
        }
      }
      backgroundColor="#eff3fe"
    />
  </ModalFooter>
</Modal>
`;
